Arreglar errores críticos: agregar elemento analisisStatus y mejorar manejo de errores en cálculo de precios

--- a/templates/index.html
+++ b/templates/index.html
@@ -527,6 +527,7 @@
                 </button>
             </div>
             <div id="calculoStatus" style="display: none; margin-top: 1.5rem;"></div>
+            <div id="analisisStatus" style="display: none; margin-top: 1.5rem;"></div>
         </div>
 
         <!-- Loading Spinner -->
